--- a/css/style.css
+++ b/css/style.css
@@ -15,85 +15,86 @@ ul,ol{
 
 h1,h2,h3,h4,h5,h6,p,a{
     line-height:0.8;
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-family: 'Roboto Slab', serif;
 }
-
 
 /*======================== nav bar css goes here =================*/
 .navbar-expand-lg .navbar-nav .nav-link {
- padding:0px 10px;
- font-family: 'Montserrat', sans-serif;
- font-size: 16px;
- color: #444;
- text-transform: uppercase;
- font-weight: 600;
- line-height: 60px;
- transition: all linear .3s;
- position: relative;
-
-}
-
-.navbar-expand-lg .navbar-nav .nav-link:hover{
-    color: #699c06;
+	padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: all linear .3s;
+    line-height: 110px;
+    position: relative;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link::before{
     position: absolute;
-    content: '';
-    width: 10%;
+    content:'';
+    width: 0;
     height: 2px;
-    top: 50%;
-    right: -10px;
-    background-color: #444;
-    transform: translateY(-50%);
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #7fd142;
+    opacity: 0;
+    transition: all linear .3s;
+}
+.navbar-expand-lg .navbar-nav .nav-link::after{
+    position: absolute;
+    content:'';
+    width: 0;
+    height: 2px;
+    bottom: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #7fd142;
     opacity: 0;
     transition: all linear .3s;
 }
 
 .navbar-expand-lg .navbar-nav .nav-link:hover::before{
     opacity: 1;
+    width: 100%;
 }
-
-.navbar-expand-lg .navbar-nav .nav-item{
-    padding-left: 20px;
+.navbar-expand-lg .navbar-nav .nav-link:hover::after{
+    opacity: 1;
+    width: 100%;
+}
+.navbar-expand-lg .navbar-nav .nav-link:hover{
+    color: #7fd142;
+}
+.navbar-expand-lg .navbar-nav .nav-item {
+	padding-left: 20px;
 }
 .navbar {
+    background-color: #036d58;
 	padding-top: 0;
 	padding-bottom: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    border-bottom: 1px solid rgb(23, 73, 23);
     z-index: 99999;
+    
 }
-
-
 /*======================== banner css goes here =================*/
 .banner-item{
     background-position: center;
     background-size: cover!important;
     background-repeat: no-repeat;
-    width: 100%;
     height: 100vh;
+    width: 100%;
     position: relative;
 }
-.banner-item::after{
+
+.banner-item::before{
     position: absolute;
     content: '';
-    width: 0;
-    height: 100vh;
-    background-color: rgba(90, 118, 39, 0.5);
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
-    opacity: 0;
-    transition: all linear .6s;
-}
-
-.banner-item:hover::after{
-    opacity: 1;
-    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .banner-content{
@@ -102,54 +103,578 @@ h1,h2,h3,h4,h5,h6,p,a{
     z-index: 999;
 }
 
-.banner-content .content h1{
-    font-family: 'Roboto Condensed', sans-serif;
+.content{
+    margin-top: 50px;
+}
+
+.content h1{
+    font-family: 'Poppins', sans-serif;
     font-size: 60px;
     color: #fff;
     text-transform: uppercase;
-    font-weight: 700;
-    padding-bottom: 10px;
+    padding-bottom: 16px;
 }
-.banner-content .content h4{
-    font-family: 'Roboto Condensed', sans-serif;
+.content h2{
+    font-family: 'Poppins', sans-serif;
+    font-size: 60px;
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 16px;
+}
+.content h4{
+    font-family: 'Open Sans', sans-serif;
     font-size: 30px;
     color: #fff;
-    text-transform: capitalize;
     font-weight: 400;
+    text-transform: capitalize;
 }
-.banner-content .content p{
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 16px;
+.content p{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
     color: #fff;
     font-weight: 400;
-    line-height: 26px;
-    max-width: 500px;
+   line-height: 26px;
+   padding-top: 10px;
+}
+
+button{
+    margin-top: 20px;
+}
+
+.btn1{
+    width: 300px;
+    height: 100px;
+    background-color: #145A32;
+    box-shadow: inset 0 0 0 0 #44bd32;
+    border-radius: 4px;
+    border: 0;
+    transition: ease-out 0.4s;
+    font-size: 30px;
+    font-weight: 500;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+.btn1:hover{
+    box-shadow: inset 300px 0 0 0 #44bd32;
+    color: #000;
+}
+
+/*======================== About us css goes here =================*/
+#aboutus{
+    padding-top: 80px;
+}
+
+.comon-head h3{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    color: #444;
+    font-weight: 600;
+    text-transform: capitalize;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.comon-head h3::before{
+    position: absolute;
+    content: '';
+    width: 150px;
+    height: 8px;
+    top: 50%;
+    left: 30px;
+    transform: translateY(-50%);
+    background: url(../images/before.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.comon-head h3::after{
+    position: absolute;
+    content: '';
+    width: 150px;
+    height: 8px;
+    top: 50%;
+    right: 30px;
+    transform: translateY(-50%);
+    background: url(../images/after.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.comon-head p{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #444;
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: capitalize;
+    max-width: 600px;
     margin: 0 auto;
 }
-.banner-btn{
+/*========================  Service Part css goes here =================*/
+
+#service{
     padding-top: 30px;
+    padding-bottom: 50px;
 }
 
-.banner-btn a{
-    font-family: 'Roboto Condensed', sans-serif;
-    padding: 10px 30px;
-    background-color: #3d5410;
+.service-head{
+    margin-bottom: 40px;
+}
+.service-head h5{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #9dcb03;
+    font-weight: 600;
+    padding-bottom: 10px;
+}
+.service-head h3{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    color: #444;
+    font-weight: 600;
+    text-transform:capitalize;
+    position: relative;
+}
+
+.service-head h3::before{
+    position: absolute;
+    content: '';
+    width: 150px;
+    height: 8px;
+    top: 50%;
+    left: -40px;
+    transform: translateY(-50%);
+    background: url(../images/before.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.service-head h3::after{
+    position: absolute;
+    content: '';
+    width: 150px;
+    height: 8px;
+    top: 50%;
+    right: -40px;
+    transform: translateY(-50%);
+    background: url(../images/after.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.service-item{
+    border: 1px solid rgba(68, 68, 68, 0.2);
+    position: relative;
+}
+
+.service-item::before{
+    position: absolute;
+    content: '';
+    width: 0;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #9dca00;
+    opacity: 0;
+    transition: all linear .3s;
+}
+
+.service-item:hover::before{
+    opacity: 1;
+    width: 100%;
+}
+.service-bottom{
+    padding: 20px;
+}
+.service-bottom h4{
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: #444;
+    text-transform: uppercase;
+    padding-bottom: 10px;
+}
+.service-bottom p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    color: #444;
+    line-height: 24px;
+    padding: 0 10px;
+    padding-left: 0;
+}
+
+.service-img{
+    width: 354px;
+    height: 268px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    transform: rotateY(0);
+    transition: all linear .3s;
+    position: relative;
+}
+.service-content{
+    padding: 30px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 268px;
+    background-color: rgba(0, 0, 0, 0.5);
+    transform: rotateY(90deg);
+    transition: all linear .3s;
+}
+
+.service-item:hover .service-content{
+    transform: rotateY(0);
+}
+.service-item:hover .service-img{
+    transform: rotateY(-90deg);
+}
+
+.service-content h4{
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     color: #fff;
-    border-radius: 5px;
-    transition: all linear .3s;
+    font-weight: 700;
     text-transform: uppercase;
+}
+.service-content p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 10px;
+    color: #fff;
+    font-weight: 400;
+    line-height: 18px;
+}
+.service-icon i{
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    background-color: #e7eaee;
+    font-size: 20px;
+    color: rgba(0, 0, 0, 0.5);
+    text-align: center;
+    border-radius: 50%;
+    transition: all linear .3s;
+}
+
+.service-icon{
+    position: absolute;
+    bottom: -20px;
+    left: 20px;
+    transition: all linear .3s;
+}
+
+.service-item:hover .service-icon{
+    left: 80%;
+}
+
+.service-item:hover .service-icon i{
+    background-color: #9dca00;
+    color: #fff;
+}
+
+/*======================== Pricing css goes here =================*/
+#pricing{
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+.pricing-head{
+    margin-bottom: 30px;
+}
+.pricing-head h3{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    color: #444;
+    font-weight: 600;
+    text-transform:capitalize;
+    position: relative;
+}
+
+
+ .pricing-head h3::before{
+    position: absolute;
+    content: '';
+    width: 150px;
+    height: 8px;
+    top: 50%;
+    left: -40px;
+    transform: translateY(-50%);
+    background: url(../images/before.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.pricing-head h3::after{
+    position: absolute;
+    content: '';
+    width: 150px;
+    height: 8px;
+    top: 50%;
+    right: -40px;
+    transform: translateY(-50%);
+    background: url(../images/after.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.pricing-item{
+    border: 1px solid rgb(211, 211, 211);
+    margin-top: 60px;
+    position: relative;
+    transition: all linear .3s;
+}
+
+.pricing-img{
+    position: relative;
+}
+
+.pricing-img::after{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 148, 50,0.4);
+    z-index: -1;
+}
+.pricing-text h5{
+    margin-top: 8px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 0;
+}
+.pricing-text span{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 600;
+    text-transform: uppercase;
+
+}
+.pricing-text h6{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+
+}
+
+.pricing-text{
+    width: 100px;
+    height: 100px;
+    background-color: #009432;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 20px;
+    position: relative;
+    position: absolute;
+    top: -20px;
+    left:-10px;
+    z-index: 999;
+}
+
+.pricing-text::after{
+    position: absolute;
+    content: '';
+    width: 110px;
+    height: 110px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%!important;
+    line-height:110px;
+    border: 1px solid #ffffff;
+    z-index: -1;
+}
+.pricing-text::before{
+    position: absolute;
+    content: '';
+    width: 110px;
+    height: 110px;
+    top: 50%;
+    left: 60px;
+    transform: translate(-50%, -50%);
+    border-radius: 50%!important;
+    line-height:110px;
+    background:#2faa1c;
+    z-index: -1;
+}
+
+.pricing-icon{
+    margin-top: -50px;
+    opacity: 0;
+    transition: all linear .3s;
+}
+
+.pricing-item:hover .pricing-icon{
+    opacity: 1;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.pricing-icon i{
+    width: 50px;
+    height: 50px;
+    color: rgb(255, 255, 255);
+    border-radius: 50%;
+    background-color: #009432;
+    line-height:50px;
+    text-align: center;
+    font-size: 20px;
+}
+/*======================== vedio css goes here =================*/
+.vedio-img{
+     background: url(../images/vedio-banner.jpg);
+     background-position: center;
+     background-size: cover;
+     background-repeat: no-repeat;
+     width: 100%;
+     height: 100vh;
+     position: relative;
+ }
+
+.vid-overlay{
+     position: absolute;
+     width: 100%;
+     height: 100%;
+     top: 0;
+     left: 0;
+     background-color:rgba(0, 0, 0, 0.5) ;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+ }
+
+ .vid-overlay i{
+     width: 100px;
+     height: 100px;
+     line-height: 100px;
+     text-align: center;
+     background-color: #1c720f;
+     color: #fff;
+     font-size: 50px;
+     border-radius: 50%;
+ }
+
+/*======================== newsletter css goes here =================*/
+ .from-head{
+     margin-top: 200px;
+ }
+
+ .from-head h3{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 30px;
+    color: #444;
+    font-weight: 600;
+    padding-bottom: 20px;
+ }
+ .from-head p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    color: #444;
     font-weight: 500;
+    padding-bottom: 10px;
+ }
+
+ form input{
+     width: 100%;
+     height:50px;
+     border-radius: 5px;
+ }
+
+.form-field{
+    position: relative;
 }
 
-.banner-btn a:hover{
-    border: 1px solid rgb(255, 250, 250);
-    background-color: transparent;
+.form-field button{
+     position: absolute;
+     top: -70px;
+     right: 0;
+     border: none;
+     padding: 12px 30px;
+     background-color: yellowgreen;
+     border-radius:0px 5px 5px 0px;
+     color: #fff;
+     text-transform: uppercase;
+     font-weight: 600;
+     z-index: 99999999;
+ }
+/*======================== footer css goes here =================*/
+
+#footer{
+    padding-top: 30px;
+    background-color: #0a3603;
+    padding-bottom: 30px;
 }
 
-/*======================== nav bar css goes here =================*/
-/*======================== nav bar css goes here =================*/
-/*======================== nav bar css goes here =================*/
-/*======================== nav bar css goes here =================*/
-/*======================== nav bar css goes here =================*/
+.footer-first-part img{
+    padding-bottom: 20px;
+}
+.footer-first-part p{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: rgb(201, 201, 201);
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: capitalize;
+}
 
+.footer-social i{
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    background-color: #44bd32;
+    border-radius: 50%;
+    line-height: 40px;
+    text-align: center;
+    margin-right: 10px;
+    transition: all linear .3s;
+}
+
+.footer-social i:hover{
+    border: 1px solid #44bd32;
+    background-color:transparent;
+}
+
+.footer-first-part h3{
+    margin-top:18px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    color: rgb(201, 201, 201);
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+.footer-first-part h5 a{
+    margin-top:14px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    color: rgb(201, 201, 201);
+    font-weight:400;
+    text-transform: capitalize;
+}
+/*======================== back to top css goes here =================*/
+
+.back-to-top i{
+    width: 40px;
+    height: 40px;
+    background-color: #20bf6b;
+    line-height: 40px;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
+}
+
+.back-to-top{
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    z-index: 999999;
+}
